package Player;

public class Bot extends Player{

    public Bot(String playerName) {
        super(playerName);
    }
}
