package Player;

public class Human extends Player{
    public Human(String playerName) {
        super(playerName);
    }
}
