package Player;

public interface TicTacToePlayer {
}
