package Player;


public interface GamePlayer extends HangManPlayer, TicTacToePlayer{
      void processResult(int result);
}
