package game.hangman;

public interface HangManPlayer {
    String chooseWord();
    char giveLetter();
}
