package game.tictactoe;

import game.Game;

public class TicTacToe extends Game {
    public int NumberOfPlayers;
    TicTacToe ttt;

    public void Introduction() {
    }

    @Override
    public void Resume() {
    }

    @Override
    public void Execute() {

    }

    @Override
    public void AssignRoles() {

    }

    @Override
    public void SelectPlayers() {
    }

}
